--- a/assets/trix/stylesheets/icons.scss
+++ b/assets/trix/stylesheets/icons.scss
@@ -3,6 +3,10 @@ $icon-bold: svgo-data-uri('trix/images/bold.svg', $precision: 1);
 $icon-bullets: svgo-data-uri('trix/images/bullets.svg', $precision: 0);
 $icon-code: svgo-data-uri('trix/images/code.svg', $precision: 1);
 $icon-heading-1: svgo-data-uri('trix/images/heading_1.svg', $precision: 0);
+$icon-heading-2: svgo-data-uri('trix/images/heading_2.svg', $precision: 0);
+$icon-heading-3: svgo-data-uri('trix/images/heading_3.svg', $precision: 0);
+$icon-heading-4: svgo-data-uri('trix/images/heading_4.svg', $precision: 0);
+$icon-heading-5: svgo-data-uri('trix/images/heading_5.svg', $precision: 0);
 $icon-italic: svgo-data-uri('trix/images/italic.svg', $precision: 1);
 $icon-link: svgo-data-uri('trix/images/link.svg', $precision: 2);
 $icon-nesting-level-decrease: svgo-data-uri('trix/images/nesting_level_decrease.svg', $precision: 1);
